--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -80,7 +80,12 @@ label {
 
 .details,
 .project-title h2 {
-
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 2em;
+    font-family: 'Staatliches';
     mix-blend-mode: exclusion;
     color: white;
 
