--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -109,13 +109,23 @@ span {
     font-size: 0.5em;
 }
 
+@media (max-width: 300px) {
+    .intro h1 {
+        font-size: 2.5vh;
+        word-break: break-word;
+    }
 
+    .projects h1 {
+        font-size: 5em;
+    }
+}
 
 
 
 @media (min-width: 300px) {
     .intro h1 {
-        font-size: 7vh;
+        font-size: 3vh;
+        word-break: break-word;
     }
 
     .projects h1 {
@@ -125,6 +135,10 @@ span {
 
 @media (min-width: 450px) {
 
+    .intro h1 {
+        font-size: 3.5vh;
+        word-break: break-word;
+    }
 
     .projects h1 {
         font-size: 6em;
