hero font change

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -12,8 +12,9 @@
 //hero
 .intro h1 {
     // $font-family2 4 6? 11 12 16
-    font-family: $hero;
-    text-transform: uppercase;
+     font-family: $hero;
+    //font-family: $test1;
+        text-transform: uppercase;
     letter-spacing: 6px;
     font-size: 3rem;
 
