--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,8 +3,7 @@
 $navigation-menu:'Staatliches',
 cursive;
 
-$hero: 'Bungee Hairline',
-cursive;
+
 
 $titles: 'Staatliches',
 cursive;
@@ -27,6 +26,13 @@ $content1: 'Inconsolata',
 monospace;
 ;
 
+// $hero: 'Bungee Hairline',
+// cursive;
+
+$test1: 'Antonio',
+sans-serif;
+$hero: 'Exo',
+sans-serif;
 
 $lightgrey:#EBEBEB;
 $lightgrey1:#f5f5f5;
