--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 @import url('https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/themes/splide-default.min.css');
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Barrio&family=Bebas+Neue&family=Bungee&family=Bungee+Hairline&family=Coda+Caption&family=Fjalla+One&family=Inconsolata:wght@200;300;400;500&family=Notable&family=Oswald:wght@200;300;400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&family=Roboto+Mono:wght@100&family=Rubik+Mono+One&family=Sarpanch:wght@900&family=Staatliches&family=Teko:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Barrio&family=Bebas+Neue&family=Bungee&family=Bungee+Hairline&family=Coda+Caption&family=Fjalla+One&family=Inconsolata:wght@200;300;400;500&family=Notable&family=Oswald:wght@200;300;400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&family=Antonio:wght@700&family=Exo:wght@600&family=Roboto+Mono:wght@100&family=Rubik+Mono+One&family=Sarpanch:wght@900&family=Staatliches&family=Teko:wght@700&display=swap');
 @import 'variables';
 @import 'colors';
 @import 'body';
