--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -38,10 +38,14 @@
         padding-left: 3%;
         border-radius: 15px;
         text-transform: lowercase;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
 
         a {
             color: black;
             text-decoration: none;
+            font-size: 0.5em;
         }
     }
 }
