--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -45,11 +45,10 @@
 //wide mobile
 @media (min-width:576px) {
 
-    .bio {
-        p {
-            font-size: 2.5em;
-        }
+    .bio p {
+        font-size: 2.5em;
     }
+
 }
 
 //tablet
@@ -60,43 +59,39 @@
 
     }
 
-    .bio {
-        p {
-            font-size: 3em;
-        }
-
+    .bio p {
+        font-size: 3em;
     }
+
+
 }
 
 //laptop
 @media (min-width:992px) {
 
     //
-    .bio {
-        p {
-            font-size: 3.5em;
-        }
+    .bio p {
+        font-size: 3.5em;
     }
+
 }
 
 //desktop
 @media (min-width:1200px) {
 
     //
-    .bio {
-        p {
-            font-size: 4em;
-        }
+    .bio p {
+        font-size: 4em;
     }
+
 }
 
 //xxlscreen
 @media (min-width:1400px) {
 
     //
-    .bio {
-        p {
-            font-size: 4.5em;
-        }
+    .bio p {
+        font-size: 4.5em;
     }
+
 }
