--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -17,10 +17,13 @@ nav {
             a {
                 text-decoration: none;
                 text-transform: uppercase;
+                color:green;
             }
         }
     }
 }
+
+.nav-link{}
 
 header {
     height: 5vh;
@@ -49,7 +52,8 @@ header {
         // border-bottom: 2px solid white;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+        margin-left: 10%;
 
     }
 
