--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,17 +1,20 @@
-
 header {
 
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid $black;
+}
+
+.nav-link {
+    color: $black;
 }
 
 .hero {
 
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid $black;
 }
 
 .intro-wrapper {
 
-    background-color: black;
+    background-color: $black;
 
 }
 
@@ -23,7 +26,7 @@ header {
 
 .links a {
 
-    color: black;
+    color: $black;
 }
 
 
@@ -56,12 +59,12 @@ header {
 
 .project-presentation {
 
-    border-top: 3px solid black;
+    border-top: 3px solid $black;
 }
 
 .contact-section-title h2,
 label {
-    color: black;
+    color: $black;
 }
 
 
@@ -80,15 +83,25 @@ label {
 
 
 
-#carousel-heading {
+#carousel-heading,
+#about-section-title {
 
-    mix-blend-mode: exclusion;
-    color: white; 
+    // mix-blend-mode: exclusion;
 
+    //  mix-blend-mode: exclusion;
+    color: $black;
 }
+
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
     color: grey !important;
 }
 
+
+[type=submit] {
+
+    background-color: $black;
+    color: white;
+    border: 1px solid white;
+}
