--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,6 +1,6 @@
 .contact-section {
     width: 100%;
-    background-color: black;
+    background-color: $black;
     align-items: center;
 }
 
@@ -50,8 +50,6 @@ form {
 [type=submit] {
     width: 30%;
     margin: 5% 0;
-    background-color: black;
-    color: white;
     border-radius: 15px;
     align-self: center;
 }
@@ -65,7 +63,9 @@ form {
 
 .user-message-input,
 .user-email-input {
-    width: 100%
+    width: 100%;
+    border-radius:5px;
+    border:none;
 }
 
 //wide mobile
@@ -77,7 +77,7 @@ form {
     .contact-text {
         display: flex;
         flex-direction: column;
-        background-color: black;
+        background-color: $black;
         justify-content: center;
         align-items: center;
 
@@ -109,7 +109,7 @@ form {
     }
 
     label {
-        color: black;
+        color: $black;
     }
 
     .contact-text {
