--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,11 @@
 $navigation-menu:'Staatliches',
 cursive;
 
+//$black:#121212;
+ $black:#0b0b0c;
+// $black:#0e0e10;
+// $black: red;
+
 
 
 $titles: 'Staatliches',
