--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -14,12 +14,14 @@ header {
 
 .intro-wrapper {
 
-    background-color: $black;
+    //  background-color: $black;
+
+    background-color: #fff;
 
 }
 
 .intro h1 {
-    color: #fff;
+    color: $black;
 }
 
 
