--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -5,20 +5,27 @@
 
 .about-wrapper {
     flex-direction: column;
+    width: 90%;
+    height: 100%;
+    margin: 5%;
+    justify-content: center;
+    padding: 5%;
 }
 
 .about {
     justify-content: center;
     width: 100%;
+    height: 100vh;
+    align-items: center;
 }
 
-.about-wrapper {
-    width: 90%;
-}
 
 .about-section-title {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 90%;
+    margin: 5% 0;
+    padding: 5%;
 
     h1 {
         margin: 5% 0;
@@ -29,9 +36,8 @@
 .bio {
     margin: 5% 0;
     padding: 5%;
-
-    margin: 5% 0;
-    padding: 5%;
+    display: flex;
+   
 
     p {
         font-size: 2em;
@@ -46,7 +52,7 @@
 @media (min-width:576px) {
 
     .bio p {
-        font-size: 2.5em;
+        font-size: 2em;
     }
 
 }
@@ -60,7 +66,7 @@
     }
 
     .bio p {
-        font-size: 3em;
+        font-size: 2.5em;
     }
 
 
@@ -69,9 +75,29 @@
 //laptop
 @media (min-width:992px) {
 
+    .about {
+
+        height: auto;
+
+    }
+
+    .about-wrapper {
+        margin: 2%;
+        padding: 2%;
+        flex-direction: row;
+    }
+
+    .about-section-title {
+        margin: 2%;
+        padding: 2%;
+        justify-content: center;
+        align-items: center;
+    }
+
+
     //
     .bio p {
-        font-size: 3.5em;
+        font-size: 3em;
     }
 
 }
@@ -81,7 +107,7 @@
 
     //
     .bio p {
-        font-size: 4em;
+        font-size: 3.5em;
     }
 
 }
@@ -91,7 +117,7 @@
 
     //
     .bio p {
-        font-size: 4.5em;
+        font-size: 4em;
     }
 
 }
