--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -64,8 +64,8 @@ form {
 .user-message-input,
 .user-email-input {
     width: 100%;
-    border-radius:5px;
-    border:none;
+    border-radius: 5px;
+    border: none;
 }
 
 //wide mobile
@@ -126,7 +126,15 @@ form {
 
     }
 
+    .user-message-input,
+    .user-email-input {
+        border-radius: 10px;
+        border: 1px solid $black;
+    }
 
+    .user-email-input{
+        width:70%;
+    }
 }
 
 //desktop
