--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,4 +1,3 @@
-
 .nav-link,
 .links {
     font-family: $navigation-menu;
@@ -8,11 +7,11 @@
 
 //hero
 .intro h1 {
-    
+
     font-family: $hero;
     text-transform: uppercase;
     letter-spacing: 6px;
-    font-size: 3rem;
+    font-size: 1.5rem;
 }
 
 
@@ -22,7 +21,7 @@
 .contact-section-title h2,
 #carousel-heading {
     font-family: $titles;
-    font-size: 3.5rem; 
+    font-size: 3.5rem;
 }
 
 .contact-content p {
@@ -33,7 +32,7 @@ label,
 input,
 textarea {
     font-family: $form;
-  
+
 }
 
 //content 
@@ -81,7 +80,7 @@ span {
 //hero
 .intro h1 {
 
-    font-size: 6vh;
+    // font-size: 6vh;
 
 
 }
@@ -106,25 +105,22 @@ span {
 }
 
 @media (max-width: 300px) {
-    .intro h1 {
-        font-size: 2.5vh;
-        word-break: break-word;
-    }
- 
+    .intro h1 {}
+
 }
 
 
 
 @media (min-width: 300px) {
     .intro h1 {
-        font-size: 3.5vh;
-        word-break: break-word;
+        font-size: 1.7em;
+
     }
 
 
 
     .about-section-title h1,
-    .contact-section-title h2, 
+    .contact-section-title h2,
     #carousel-heading {
         font-family: $titles;
         font-size: 4.5rem;
@@ -149,7 +145,7 @@ span {
 
 //wide mobile
 @media (min-width: 576px) {
- 
+
     .nav-link {
         font-size: 1.4em;
     }
@@ -168,7 +164,7 @@ span {
         font-family: $titles;
         font-size: 5.5rem;
     }
-} 
+}
 
 //tablet
 @media (min-width: 768px) {
