--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,14 +4,11 @@
 @import 'variables';
 @import 'colors';
 @import 'body';
-@import 'about';
 @import 'banner';
 @import 'contact';
 @import 'footer';
 @import 'projects';
-@import 'slider';
 @import 'layout';
-@import 'skills';
 @import 'fonts';
-@import 'project';
-@import 'ptest';
+//@import 'project';
+// @import 'ptest';
