--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -49,12 +49,6 @@ header {
     width: 90%;
 
     h1 {
-        // font-size: 3em;
-        // height: calc(100%/3);
-        // display: flex;
-        // align-items: center;
-        // justify-content: flex-start;
-        // margin-left: 10%;
         color: white;
 
     }
@@ -68,12 +62,12 @@ header {
 .greeting {
     display: flex;
     width: 90%;
-    margin: 5%;
-    padding: 5% 0;
+
     flex-direction: column;
     align-items: flex-start;
     height: auto;
 }
+
 
 
 
@@ -91,22 +85,60 @@ header {
     }
 }
 
+.bio {
+  
+    display: flex;
 
-// //wide mobile
-// @media (min-width: 576px) {}
 
-// //tablet
-// @media (min-width: 768px) {}
+    p {
+        font-size: 2em;
+    }
+
+}
+
+
+
+
+//wide mobile
+@media (min-width:576px) {
+
+    .bio p {
+        font-size: 2em;
+    }
+
+}
+
+//tablet
+@media (min-width:768px) {
+
+    .bio p {
+        font-size: 2.5em;
+    }
+
+
+}
+
 
 // //laptop
- @media (min-width: 992px) {
-    .bio p{
-        font-size:2em;
-    } 
- }
+@media (min-width: 992px) {
+    .bio p {
+        font-size: 3em;
+    }
+}
 
-// //desktop
-// @media (min-width: 1200px) {}
+//desktop
+@media (min-width:1200px) {
 
-// //xxlscreen
-// @media (min-width: 1400px) {}
+    .bio p {
+        font-size: 3.5em;
+    }
+
+}
+
+@media (min-width:1400px) {
+
+    .bio p {
+        font-size: 4em;
+    }
+
+}
