--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -103,16 +103,17 @@ header {
 @media (min-width:576px) {
 
     .bio p {
-        font-size: 2em;
+        font-size: 1.5em;
     }
 
 }
 
 //tablet
 @media (min-width:768px) {
-
+ting
+    .gree
     .bio p {
-        font-size: 2.5em;
+        font-size: 1.8em;
     }
 
 
